objects/ssot__StationaryAssetEnvSource__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessRegion__c</fullName>
        <label>Business Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CityName__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CrbnEmssnScopeAllocId__c</fullName>
        <label>Carbon Emission Scope Allocation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ElectricityEmssnFctrId__c</fullName>
        <label>Electricity Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnvironmentalRiskId__c</fullName>
        <label>Environmental Risk</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Stationary Environmental Source Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompanyOwnedAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Company Owned Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLeedCertified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Leed Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LeaseExpirationDate__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LeaseIdentifier__c</fullName>
        <label>Lease Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MktBsdElectrEmssnFctrId__c</fullName>
        <label>Market based Electricity Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaNumber__c</fullName>
        <label>Occupied Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaUnitId__c</fullName>
        <label>Occupied Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherEmssnFctrId__c</fullName>
        <label>Other Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEnvironmentalSourceId__c</fullName>
        <label>Parent Environmental Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PremiseIdentifier__c</fullName>
        <label>Premise Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RefrigerantEmssnFctrId__c</fullName>
        <label>Refrigerant Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegionalBldgEnergyIntensityId__c</fullName>
        <label>Regional Building Energy Intensity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateId__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StationaryAssetIdentifier__c</fullName>
        <label>Stationary Asset Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StationaryAssetType__c</fullName>
        <label>Stationary Asset Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetAddress2Text__c</fullName>
        <label>Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetAddressText__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaNumber__c</fullName>
        <label>Total Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaUnitId__c</fullName>
        <label>Total Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WstDispoEmssnFctrSetId__c</fullName>
        <label>Waste Disposal Emission Factor Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383726811_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnvSource_Electricity_rel</label>
        <referenceTo>ssot__ElectricityEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnvSource_Electricity_rel</relationshipLabel>
        <relationshipName>rel_1747383726811_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383746753_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnvSource_CrbnEmssnSc_rel</label>
        <referenceTo>ssot__CarbonEmissionScopeAllocation__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnvSource_CrbnEmssnSc_rel</relationshipLabel>
        <relationshipName>rel_1747383746753_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383818897_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnvSource_MktBsdElect_rel</label>
        <referenceTo>ssot__ElectricityEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnvSource_MktBsdElect_rel</relationshipLabel>
        <relationshipName>rel_1747383818897_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>